# Chess-Game

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
Chess Game with Pygames/: main.py
docs/: ARCHITECTURE.md  QA_TEST_CASES.md  RELEASE_NOTES.md  RUNBOOK.md
src/chess_game/: __init__.py  board.py  config.py  game.py  main.py  pieces.py  renderer.py
tests/: __init__.py  test_board.py  test_config.py  test_pieces.py
